# Federated_Learning_Medical_Imaging

./: .gitignore  README.md  brain_age_prediction.ipynb  pyproject.toml  visualize_result.ipynb
fl-brain/: README.md  pyproject.toml  results_fedavg_pathological.json
fl-brain/fl_brain/: client_app.py  my_strategy.py  server_app.py  task.py
fl-cifar10/fl_cifar10/: __init__.py  server_app.py
fl-cifar10/results/: results_fedadam_dirichlet.json  results_fedadam_iid.json  results_fedavg_dirichlet.json  results_fedavg_iid.json  results_fedavg_shard.json  results_fedprox_dirichlet.json  results_fedprox_iid.json  results_fedprox_pathological.json  results_fedprox_shard.json
fl_cifar10/: client_app.py  my_strategy.py  server_app.py  task.py
global_model/: global_model_final_fedadam_dirichlet.pt  global_model_final_fedadam_iid.pt  global_model_final_fedadam_pathological.pt  global_model_final_fedadam_shard.pt  global_model_final_fedavg_dirichlet.pt  global_model_final_fedavg_iid.pt  global_model_final_fedavg_parthological.pt  global_model_final_fedavg_shard.pt  global_model_final_fedprox_dirichlet.pt  global_model_final_fedprox_iid.pt  global_model_final_fedprox_parthological.pt  global_model_final_fedprox_shard.pt
results/: results_fedadam_pathological.json  results_fedadam_shard.json  results_fedavg_pathological.json
